fixed spacing for the sidebar footer

--- a/css/custom.css
+++ b/css/custom.css
@@ -1509,6 +1509,7 @@ body a a:hover {
 
 #sidebar #footer .nav-links-mobile li a {
   color: #1f1a47;
+  padding-top: 10px;
 }
 
 .sidebar-close-toggle {
